# goodreads-library-checker

./: .env.example  LICENSE  README.md  setup.cfg
src/checker/: cli.py  goodreads.py  gvpl.py  library.py
