[metadata]
name = goodreads-library-checker
version = 0.1.0
description = Check your Goodreads TBR list against the VIRL catalog

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    requests>=2.31
    beautifulsoup4>=4.12
    rich>=13.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    check-library = checker.cli:main
